[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
env_files = [".env.template", ".env.test"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
asyncio_mode = "auto"

[project]
name = "sppnaut-generator"
version = "0.1"
dependencies = [
    "awscli==1.25.59",
    "boto3==1.24.58",
    "django==4.1.7",
    "django-cors-headers==3.14.0",
    "gunicorn==20.1.0",
    "procrastinate==0.27.0",
    "python-decouple==3.8",
    "sentry-sdk==1.19.0",
]

[project.optional-dependencies]
dev = [
    "black==23.3.0",
    "moto[s3]==4.1.6",
    "pytest==7.2.2",
    "pytest-asyncio==0.21.0",
    "pytest-django==4.5.2",
    "pytest-dotenv==0.5.2",
    "pytest-subprocess==1.4.2",
    "requests==2.28.1",
    "time-machine==2.9.0",
]

[tool.setuptools]
packages = []
